eslint 적용 및 package.json rules 설정

--- a/service/client/package.json
+++ b/service/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.14",
+    "eslint-config-airbnb": "^17.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
@@ -15,7 +16,17 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "airbnb"
+    ],
+    "rules": {
+      "react/jsx-filename-extension": 0,
+      "no-unused-vars": 1
+    },
+    "env": {
+      "browser": true
+    }
   },
   "browserslist": {
     "production": [
