--- a/service/client/package.json
+++ b/service/client/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
