--- a/service/client/package.json
+++ b/service/client/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.14",
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.0.0-beta.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "classnames": "^2.2.6",
+    "clsx": "^1.0.4",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
