product item 템플릿 작성

--- a/service/client/package.json
+++ b/service/client/package.json
@@ -32,8 +32,8 @@
       "prettier"
     ],
     "rules": {
-      "no-unused-vars": 1,
-      "button-has-type": 0
+      "no-unused-vars": "warn",
+      "button-has-type": "null"
     },
     "env": {
       "browser": true
