--- a/service/client/package.json
+++ b/service/client/package.json
@@ -46,6 +46,14 @@
       "no-unused-vars": "warn",
       "button-has-type": "null",
       "react/prefer-stateless-function": 1,
+      "react/forbid-prop-types": [
+        0,
+        {
+          "forbid": [
+            "object"
+          ]
+        }
+      ],
       "react/prop-types": [
         1,
         {
