--- a/service/client/package.json
+++ b/service/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.0.0-beta.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
