Mail API 추가 - GoMotiv (#10)
* 필요없는 최상위 node_modules, yarn.lock 삭제 (#7)

* ignore update (#8)

* 필요없는 최상위 node_modules, yarn.lock 삭제

* yarn.lock 삭제, ignore 추가

* appBar css 수정 및 모바일 앱바 popover 추가

* express react 서버 포트 수정

* react express 포트 수정2

* app bar 아이콘 수정

* mail 인증 API 추가 / 강동기

--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-text-mask": "^5.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -92,7 +92,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3000",
   "devDependencies": {
     "cross-env": "^5.2.0"
   }
