--- a/service/package.json
+++ b/service/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3001 node ./bin/www"
+    "start": "PORT=3000 node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,6 +18,7 @@
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-twitch": "^1.0.3"
+    "passport-twitch": "^1.0.3",
+    "nodemailer": "^6.1.1"
   }
 }
