--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
+    "chartist": "^0.11.0",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
     "eslint-config-airbnb": "^17.1.0",
@@ -15,13 +17,16 @@
     "eslint-plugin-prettier": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-chartist": "^0.13.3",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-text-mask": "^5.4.3"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start:mac": "PORT=3001 react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
