--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-chartist": "^0.13.3",
@@ -25,9 +26,8 @@
     "react-text-mask": "^5.4.3"
   },
   "scripts": {
-    "start:mac": "PORT=3001 react-scripts start",
-
     "start": "set PORT=3001 && react-scripts start",
+    "startmac": "PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
