--- a/service/package.json
+++ b/service/package.json
@@ -6,6 +6,7 @@
     "start": "set PORT=3000 && node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
@@ -19,7 +20,6 @@
     "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-twitch": "^1.0.3",
-    "nodemailer": "^6.1.1"
+    "passport-twitch": "^1.0.3"
   }
 }
