--- a/service/package.json
+++ b/service/package.json
@@ -13,6 +13,8 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
