--- a/service/package.json
+++ b/service/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.1",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
