sprint#3 Hwasurr -> dev 수익금 차트 (#24)
* merged part pull commit,
오버레이 컴포넌트 db 연결, 대시보드 레이아웃 수정

* 오버레이 주소 컴포넌트 수정/ 트위치로그인 user 데이터 추가

* 세션에 따라 대시보드 라우팅 분기처리 / warning 해결 / shortid 설치

* 대시보드 컴포넌트에 session props 전달/ 쿼리문수정(세션값사용) /디폴트값 생성

* 쿼리 수정, 인사 session에서 불러오기

* creator / marketer 라우팅 및 폴더구조 수정

* 수익관리 탭 라우팅

* income 탭 레이아웃 생성 / dashboard 폴더 구조 변경

* 수익금 차트 및 데이터 받아오기 작업중

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
-    "chartist": "^0.11.0",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
     "eslint-config-airbnb": "^17.1.0",
@@ -26,7 +25,9 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "react-text-mask": "^5.4.3"
+    "react-text-mask": "^5.4.3",
+    "recharts": "^1.6.2",
+    "shortid": "^2.2.14"
   },
   "scripts": {
     "start:mac": "PORT=3001 react-scripts start",
