--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-beta.0",
+    "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^4.0.0-alpha.15",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
