--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "@material-ui/styles": "^3.0.0-alpha.10",
     "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
+    "babel-jest": "24.7.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react-hooks": "^1.5.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "history": "^4.9.0",
     "http-server": "^0.11.1",
     "perfect-scrollbar": "^1.4.0",
