--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^4.0.0-alpha.15",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/styles": "^4.1.2",
     "@material-ui/utils": "^4.0.0-beta.1",
     "axios": "^0.18.0",
     "babel-jest": "24.7.1",
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react-hooks": "^1.6.1",
     "history": "^4.9.0",
+    "http-proxy-middleware": "^0.19.1",
     "http-server": "^0.11.1",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
@@ -58,7 +59,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000",
   "devDependencies": {
     "cross-env": "^5.2.0"
   }
