nginx configure 변경

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    root /var/www/test.zychspace.com;
+    root /var/www/onad.react.com;
     index index.html;
     location / {
         try_files $uri /index.html;
