travis.yml 파일 위치 변경

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ services:
 install:
   - yarn
 script:
+  - cd client
   - yarn build
 after_success:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
