--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "node"
+  - "10.15.3"
 
 branches:
   only:
@@ -13,11 +13,15 @@ before_install:
 
 services:
   - docker
-install:
-  - yarn
+
 script:
   - cd client
+  - yarn
   - yarn build
+
+cache:
+  yarn: true
+
 after_success:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
   - docker build -t hwasurr/onad_react .
