--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    root /var/www/react.onad.com;
+    root /var/www/onad.com;
     index index.html;
     location / {
         try_files $uri /index.html;
