--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,6 +2,7 @@ FROM nginx:1.14.2-alpine
 
 COPY ./build /var/www/onad.com
 COPY ./nginx.conf /etc/nginx/conf.d/onad.com.conf
+ENV NODE_ENV production
 
 EXPOSE 3001
 
