--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -2,6 +2,7 @@ FROM nginx:1.14.2-alpine
 
 COPY . /var/www/api.onad.com
 COPY ./nginx.conf /etc/nginx/conf.d/test.api.onad.com.conf
+ENV NODE_ENV production
 
 EXPOSE 3000
 
