update docker file  in the api server

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,9 +1,8 @@
-FROM nginx:1.14.2-alpine
-
-COPY . /var/www/api.onad.com
-COPY ./nginx.conf /etc/nginx/conf.d/test.api.onad.com.conf
+FROM node:latest
 ENV NODE_ENV production
-
+RUN mkdir -p /home/api_server
+WORKDIR /home/api_server
+ADD . /home/api_server
+RUN yarn
 EXPOSE 3000
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD yarn start
