--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
