Add socket.io to continuous integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ services:
 
 script:
   - cd client && yarn && CI="false" yarn build && cd -
-  - cd service && yarn && cd -
-
+  
 cache:
   yarn: true
 
@@ -25,8 +24,10 @@ after_success:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
   - docker build -t hwasurr/onad_web ./client
   - docker build -t hwasurr/onad_web_api ./service
+  - docker build -t hwasurr/onad_socket ./node_websocket
   - docker push hwasurr/onad_web
   - docker push hwasurr/onad_web_api
+  - docker push hwasurr/onad_socket
 
 # slack notification for one channel
 notifications:
