--- a/node_websocket/package.json
+++ b/node_websocket/package.json
@@ -12,6 +12,7 @@
         "socket.io": "^2.2.0"
     },
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "start:production": "node app.js"
     }
 }
