--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,6 +1,7 @@
 server {
-    root /var/www/onad.com;
+    root /var/www/onad.io;
     index index.html;
+    server_name onad.io;
     location / {
         try_files $uri /index.html;
     }
