[deploy] Dev => master (#67)
* 망할뻔 ㅎㄷㄷ

* fggf

* dfd

* [UPDATE SPRINT] 미계약시 광고URL 비활성화 + 계약완료시 계약서 보기 등.. (#61)

* 아아앙

* nginx,dockerfile,travis 설정 / gitignore 추가

* travis 설정 변경

* travis 파일명 변경

* nginx configure 변경

* [ Update Sprint ] (Z-15) 광고캐시 관리 광고캐시 환불 및 충전

* warning 삭제

* prprprpr

* [Update Sprint] creator Router doQuery화 및 오류수정

* mailer port변경

* appbar 클릭시 수정

* marketer doQuery 수정 중

* marketer doQuery 수정

* 190718 merged - hwasurr

* marketer doQuery 완료

* marketer doQuery 수정

* handle warnings

* merging

* image 삭제, dockerfile, nginx 설정 변경

* cors origin 변경

* cors 수정

* frontHost 수정

* healthCheck 추가

* [Update Sprint] 광고계약 수정 및 calculation 실행

* creator dashboard 진입 수정

* hostname 수정

* 서비스 소개 및 이용안내 페이지 Appbar 수정

* hostname 변경 / http - https

--- a/service/config.json
+++ b/service/config.json
@@ -11,7 +11,7 @@
         "reactHostName": "http://localhost:3001"
     },
     "production": {
-        "apiHostName": "http://52.79.211.82:3000",
-        "reactHostName": "http://52.79.211.82:3001"
+        "apiHostName": "https://api.onad.io",
+        "reactHostName": "https://onad.io"
     }
 }
