--- a/service/config.json
+++ b/service/config.json
@@ -16,6 +16,6 @@
         "apiHostName": "https://api.onad.io",
         "reactHostName": "https://onad.io",
         "clientID": "7197nobf8rsf7aqqk4nf7a22dtyu93",
-        "clientSecret": "e4y6aaq6cq8vy1c0a4xfzo17ton7mi
+        "clientSecret": "e4y6aaq6cq8vy1c0a4xfzo17ton7mi"
     }
 }
