--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-swipeable-views": "^0.13.3",
+    "react-swipeable-views-utils": "^0.13.3",
     "react-text-mask": "^5.4.3",
     "shortid": "^2.2.14"
   },
