--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
+    "react-number-format": "^4.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-swipeable-views": "^0.13.3",
