--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
+    "material-table": "^1.50.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
