--- a/service/config.json
+++ b/service/config.json
@@ -4,6 +4,7 @@
         "user": "onad",
         "password": "rkdghktn12",
         "database": "onadnode",
+        "charset": "utf8mb4",
         "port": 3306
     },
     "dev": {
