--- a/node_websocket/package.json
+++ b/node_websocket/package.json
@@ -7,9 +7,12 @@
         "ejs": "^2.6.1",
         "express": "^4.16.4",
         "express-session": "^1.16.1",
+        "moment": "^2.24.0",
         "mysql": "^2.17.1",
         "node-schedule": "^1.3.2",
-        "socket.io": "^2.2.0"
+        "socket.io": "^2.2.0",
+        "winston": "^3.2.1",
+        "winston-daily-rotate-file": "^4.2.1"
     },
     "scripts": {
         "start": "nodemon app.js",
