--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.26",
+    "@material-ui/core": "4.3.2",
+    "@material-ui/icons": "4.2.1",
+    "@material-ui/lab": "4.0.0-alpha.26",
     "@material-ui/styles": "^4.3.0",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
