--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.3.2",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "4.0.0-alpha.26",
     "@material-ui/styles": "^4.3.0",
     "axios": "^0.19.0",
