--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start:mac": "PORT=3001 react-scripts start",
     "start": "set PORT=3001 && react-scripts start",
-    "build": "NODE_ENV=production HOST=$HOST react-scripts build",
+    "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
