--- a/calculator/package.json
+++ b/calculator/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
