--- a/service/package.json
+++ b/service/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-mysql-session": "^2.1.0",
