--- a/chat/package.json
+++ b/chat/package.json
@@ -4,7 +4,7 @@
   "description": "chat bot client for twitch-onad",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
+    "test": "node test.js",
     "start": "node index.js"
   },
   "author": "",
