--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "@material-ui/lab": "4.0.0-alpha.26",
     "@material-ui/styles": "^4.3.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
     "material-table": "^1.50.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
