--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 sudo: required
 
 before_install:
-  - npm install -g yarn  # yarn을 글로벌로 설치
+  - npm install -g yarn # yarn을 글로벌로 설치
   # 테스트
 
 services:
@@ -22,7 +22,8 @@ script:
   - cd service && yarn && cd -
   - cd node_websocket && yarn && cd -
   - cd calculator && yarn && cd -
-  
+  - cd chat && yarn && cd -
+
 cache:
   yarn: true
 
@@ -32,14 +33,17 @@ after_success:
   - docker build -t $DOCKER_USERNAME/onad_web_api ./service
   - docker build -t $DOCKER_USERNAME/onad_socket ./node_websocket
   - docker build -t $DOCKER_USERNAME/onad_calculator ./calculator
+  - docker build -t $DOCKER_USERNAME/onad_twitch_chat ./chat
   - docker tag $DOCKER_USERNAME/onad_web $DOCKER_USERNAME/onad_web:0.$TRAVIS_JOB_NUMBER
   - docker tag $DOCKER_USERNAME/onad_web_api $DOCKER_USERNAME/onad_web_api:0.$TRAVIS_JOB_NUMBER
   - docker tag $DOCKER_USERNAME/onad_socket $DOCKER_USERNAME/onad_socket:0.$TRAVIS_JOB_NUMBER
   - docker tag $DOCKER_USERNAME/onad_calculator $DOCKER_USERNAME/onad_calculator:0.$TRAVIS_JOB_NUMBER
+  - docker tag $DOCKER_USERNAME/onad_twitch_chat $DOCKER_USERNAME/onad_twitch_chat:0.$TRAVIS_JOB_NUMBER
   - docker push $DOCKER_USERNAME/onad_web
   - docker push $DOCKER_USERNAME/onad_web_api
   - docker push $DOCKER_USERNAME/onad_socket
   - docker push $DOCKER_USERNAME/onad_calculator
+  - docker push $DOCKER_USERNAME/onad_twitch_chat
 
 # slack notification for one channel
 notifications:
