--- a/chat/package.json
+++ b/chat/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "mysql": "^2.17.1",
+    "node-schedule": "^1.3.2",
     "tmi.js": "^1.5.0"
   }
 }
