--- a/service/package.json
+++ b/service/package.json
@@ -18,6 +18,7 @@
     "express": "~4.16.0",
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.16.1",
+    "geoip-lite": "^1.3.8",
     "http-errors": "^1.7.3",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
