--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "history": "^4.9.0",
     "material-table": "^1.50.0",
     "prop-types": "^15.7.2",
