--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-chartjs-2": "^2.7.6",
+    "react-countup": "^4.2.3",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
     "react-markdown": "^4.2.2",
