메인페이지 현재 방송송출중인 크리에이터 캐러셀 구현

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "scripts": {
     "service": "cd service && node bin/www",
     "client": "cd client && yarn start"
+  },
+  "dependencies": {
+    "node-sass": "^4.13.0"
   }
 }
