--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "history": "^4.9.0",
     "material-table": "^1.50.0",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
