--- a/service/package.json
+++ b/service/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
+    "node-sass": "^4.13.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.1.1",
     "nodemon": "^1.19.0",
