--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-colorschemes": "^0.4.0",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "history": "^4.9.0",
