--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "history": "^4.9.0",
+    "jquery": "^3.4.1",
     "material-table": "^1.50.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
