--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-swipeable-views-utils": "^0.13.3",
     "react-text-mask": "^5.4.3",
     "react-tooltip": "^3.11.1",
+    "recharts": "^2.0.0-beta.1",
     "recompose": "^0.30.0",
     "shortid": "^2.2.14"
   },
