--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "dependencies": {
     "@google/markerclusterer": "^2.0.1",
-    "@material-ui/core": "4.3.3",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "4.0.0-alpha.26",
-    "@material-ui/styles": "^4.3.0",
+    "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.36",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
