--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ node_websocket/bin/log/.4656d4b69a1bdd3f78a7960fb7be9313031a78bb-audit.json
 node_websocket/views/test.ejs
 node_websocket/public/requestImgSync.js
 node_websocket/requestImgSync.js
+node_websocket/views/browsercheck.ejs
