nginx POST 메소드 차단 해결중

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -4,6 +4,9 @@ server {
     server_name onad.io;
     location / {
         try_files $uri /index.html;
+        limit_except GET POST {
+            deny all;
+        };
     }
     listen 3001 default_server;
 }
