--- a/service/package.json
+++ b/service/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
