--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.0.1",
     "@google/markerclusterer": "^2.0.1",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-colorschemes": "^0.4.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "history": "^4.9.0",
     "html2canvas": "^1.0.0-rc.5",
