--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,8 @@
     "react-number-format": "^4.2.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-swipeable-views": "^0.13.3",
-    "react-swipeable-views-utils": "^0.13.3",
+    "react-swipeable-views": "0.13.3",
+    "react-swipeable-views-utils": "0.13.3",
     "react-text-mask": "^5.4.3",
     "react-tooltip": "^3.11.1",
     "recharts": "^2.0.0-beta.1",
