--- a/node_websocket/package.json
+++ b/node_websocket/package.json
@@ -16,7 +16,6 @@
         "winston-daily-rotate-file": "^4.2.1"
     },
     "scripts": {
-        "start": "NODE_ENV=$NODE_ENV nodemon app.js",
-        "start:production": "NODE_ENV=production node app.js"
+        "start": "nodemon app.js"
     }
 }
