--- a/node_websocket/package.json
+++ b/node_websocket/package.json
@@ -16,6 +16,7 @@
         "winston-daily-rotate-file": "^4.2.1"
     },
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "start:production": "node app.js"
     }
 }
