--- a/service/package.json
+++ b/service/package.json
@@ -38,5 +38,8 @@
     "passport-twitch-new": "^0.0.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.9.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.7.5"
   }
 }
