api server migration 중

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "devDependencies": {
-    "babel-eslint": "10.0.2",
-    "express-generator": "^4.16.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
+    "babel-eslint": "10.0.2",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0"
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "express-generator": "^4.16.0",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   },
   "prettier": {
     "singleQuote": true,
@@ -28,9 +28,5 @@
   "scripts": {
     "service": "cd service && node bin/www",
     "client": "cd client && yarn start"
-  },
-  "dependencies": {
-    "ngrok": "^3.2.7",
-    "node-sass": "^4.13.0"
   }
 }
