--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,48 @@
 {
-  "name": "server",
+  "name": "onad-api-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
+  "scripts": {
+    "start": "set PORT=3000 && node ./bin/www",
+    "start:debug": "set PORT=3000 && nodemon ./bin/www"
+  },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0"
+    "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/express-mysql-session": "^1.2.2",
+    "@types/express-session": "^1.15.16",
+    "@types/http-errors": "^1.6.3",
+    "@types/node": "^13.7.1",
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "@types/node": "^13.7.0"
+    "@types/debug": "^4.1.5",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.2.1",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-mysql-session": "^2.1.3",
+    "express-session": "^1.17.0",
+    "geoip-lite": "^1.4.0",
+    "http-errors": "^1.7.3",
+    "mysql": "^2.18.1",
+    "node-schedule": "^1.3.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
+    "passport-twitch-new": "^0.0.1",
+    "typescript": "^3.7.5",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   }
 }
