--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node app.ts",
-    "start:debug": "nodemon --watch '*.ts' --exec ts-node app.ts"
+    "start": "set PORT=3000 && ts-node ./bin/www.ts",
+    "start:mac": "PORT=3000 ts-node ./bin/www.ts",
+    "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -16,6 +17,7 @@
     "@types/express-session": "^1.15.16",
     "@types/http-errors": "^1.6.3",
     "@types/node": "^13.7.1",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
@@ -37,6 +39,7 @@
     "http-errors": "^1.7.3",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.0",
