--- a/server/package.json
+++ b/server/package.json
@@ -6,22 +6,26 @@
   "scripts": {
     "start": "set PORT=3000 && ts-node ./bin/www.ts",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
-    "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts"
+    "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.16",
     "@types/http-errors": "^1.6.3",
     "@types/node": "^13.7.1",
     "@types/nodemailer": "^6.4.0",
-    "@types/debug": "^4.1.5",
     "nodemon": "^2.0.2",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "axios": "^0.19.2",
