--- a/server/package.json
+++ b/server/package.json
@@ -15,14 +15,17 @@
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/crypto-js": "^3.1.43",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.16",
     "@types/http-errors": "^1.6.3",
     "@types/jest": "^25.1.2",
+    "@types/mysql": "^2.15.8",
     "@types/node": "^13.7.1",
     "@types/nodemailer": "^6.4.0",
+    "@types/swagger-ui-express": "^4.1.1",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
@@ -34,6 +37,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^3.0.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -56,6 +60,8 @@
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "passport-twitch-new": "^0.0.1",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   }
