--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^4.2.3",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
+    "react-hook-form": "^4.9.5",
     "react-markdown": "^4.2.2",
     "react-number-format": "^4.2.0",
     "react-router-dom": "^5.0.1",
