--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "set PORT=3000 && ts-node ./bin/www.js",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
     "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
+    "start:debug:mac": "PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js",
     "test": "jest --config jest.config.json --coverage"
@@ -20,11 +21,19 @@
     "@types/express": "^4.17.2",
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.16",
+    "@types/helmet": "^0.0.45",
     "@types/http-errors": "^1.6.3",
     "@types/jest": "^25.1.2",
     "@types/mysql": "^2.15.8",
     "@types/node": "^13.7.1",
     "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.2",
+    "@types/passport-google-oauth20": "^2.0.3",
+    "@types/passport-kakao": "^0.2.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-naver": "^0.2.0",
+    "@types/passport-oauth2": "^1.4.8",
+    "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
@@ -37,7 +46,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@types/swagger-jsdoc": "^3.0.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -50,6 +58,7 @@
     "express-mysql-session": "^2.1.3",
     "express-session": "^1.17.0",
     "geoip-lite": "^1.4.0",
+    "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
@@ -59,6 +68,7 @@
     "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
+    "passport-oauth2": "^1.5.0",
     "passport-twitch-new": "^0.0.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
