세션관련 마이그레이션 및 세션체크 미들웨어

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "start": "set PORT=3000 && ts-node ./bin/www.js",
+    "start": "set PORT=3000 && ts-node ./bin/www.ts",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
     "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
     "start:debug:mac": "PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
