--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "set PORT=3000 && ts-node ./bin/www.ts",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
-    "start:debug": "set PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
-    "start:debug:mac": "PORT=3000 && nodemon --watch '*.ts' --exec ts-node ./bin/www.ts",
+    "start:debug": "set PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
+    "start:debug:mac": "PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js",
     "test": "jest --config jest.config.json --coverage"
