--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/morgan": "^1.7.37",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "babel-eslint": "10.0.2",
@@ -28,5 +29,8 @@
   "scripts": {
     "service": "cd service && node bin/www",
     "client": "cd client && yarn start"
+  },
+  "dependencies": {
+    "morgan": "^1.9.1"
   }
 }
