--- a/server/package.json
+++ b/server/package.json
@@ -63,6 +63,7 @@
     "geoip-lite": "^1.4.0",
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
