--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@types/helmet": "^0.0.45",
     "@types/http-errors": "^1.6.3",
     "@types/jest": "^25.1.2",
+    "@types/morgan": "^1.7.37",
     "@types/mysql": "^2.15.8",
     "@types/node": "^13.7.1",
     "@types/nodemailer": "^6.4.0",
