--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
     "express-generator": "^4.16.0",
     "prettier": "^1.19.1",
@@ -30,7 +30,5 @@
     "service": "cd service && node bin/www",
     "client": "cd client && yarn start"
   },
-  "dependencies": {
-    "morgan": "^1.9.1"
-  }
+  "dependencies": {}
 }
