--- a/server/package.json
+++ b/server/package.json
@@ -42,12 +42,13 @@
     "rimraf": "^3.0.2",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/morgan": "^1.7.37",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -61,7 +62,9 @@
     "express-session": "^1.17.0",
     "geoip-lite": "^1.4.0",
     "helmet": "^3.21.2",
+    "http-error": "0.0.6",
     "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.2",
