--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -49,6 +49,7 @@
     "@types/classnames": "^2.2.9",
     "@types/dotenv": "^8.2.0",
     "@types/googlemaps": "^3.39.3",
+    "@types/history": "^4.7.5",
     "@types/jest": "^24.0.0",
     "@types/jquery": "^3.3.33",
     "@types/jspdf": "^1.3.3",
