--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/morgan": "^1.7.37",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
-    "babel-eslint": "10.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
