--- a/server/package.json
+++ b/server/package.json
@@ -66,6 +66,7 @@
     "helmet": "^3.21.2",
     "http-error": "0.0.6",
     "http-errors": "^1.7.3",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
