--- a/server/package.json
+++ b/server/package.json
@@ -72,11 +72,11 @@
     "passport-twitch-new": "^0.0.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.4.2",
-    "webpack": "^4.41.6",
     "ts-loader": "^6.2.1",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   }
 }
