ts client 구조 정리 + server 병합후 정리

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "set PORT=3000 && ts-node ./bin/www.ts",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
-    "start:debug": "set PORT=3002 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
+    "start:debug": "set PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
     "start:debug:mac": "PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js",
@@ -23,11 +23,12 @@
     "@types/express": "^4.17.2",
     "@types/express-mysql-session": "^1.2.2",
     "@types/express-session": "^1.15.16",
+    "@types/geoip-lite": "^1.1.30",
     "@types/helmet": "^0.0.45",
     "@types/http-errors": "^1.6.3",
     "@types/jest": "^25.1.2",
     "@types/morgan": "^1.7.37",
-    "@types/mysql": "^2.15.8",
+    "@types/mysql": "^2.15.9",
     "@types/node": "^13.7.1",
     "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.2",
