--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "onad-api-server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "app.ts",
   "license": "MIT",
   "scripts": {
     "start": "set PORT=3000 && ts-node ./bin/www.ts",
     "start:mac": "PORT=3000 ts-node ./bin/www.ts",
     "start:debug": "set PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
-    "start:debug:mac": "PORT=3000 && nodemon --watch *.ts --exec ts-node ./bin/www.ts",
+    "start:debug:mac": "PORT=3000 && nodemon --watch ./ --exec ts-node ./bin/www.ts",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js",
     "start:production": "NODE_ENV=production node ./dist/bundle.js",
