js - client, js - service 애드챗 test 준비 완료

--- a/service/package.json
+++ b/service/package.json
@@ -36,6 +36,7 @@
     "passport-naver": "^1.0.6",
     "passport-twitch": "^1.0.3",
     "passport-twitch-new": "^0.0.1",
+    "ua-parser-js": "^0.7.21",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.9.0"
   },
