깃헙액션추가/클라,서버테스트추가/애드챗로직강화/빌드변경/빌드노드버전변경/트래비스설정변경

--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -6,7 +6,7 @@
     "start:mac": "PORT=3001 react-scripts start",
     "start": "set PORT=3001 && react-scripts start",
     "build": "NODE_ENV=production GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --detectOpenHandles --forceExit --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "dependencies": {
