dockerfile 경로 수정

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.14.2-alpine
 
-COPY ./build /var/www/onad.io
-COPY ./nginx.conf /etc/nginx/conf.d/onad.io.conf
+COPY build /var/www/onad.io
+COPY nginx.conf /etc/nginx/conf.d/onad.io.conf
 ENV NODE_ENV production
 
 EXPOSE 3001
