워크플로 수정

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:1.14.2-alpine
-
+RUN ls -la . 
+RUN pwd
 COPY build /var/www/onad.io
 COPY nginx.conf /etc/nginx/conf.d/onad.io.conf
 ENV NODE_ENV production
