--- a/.github/workflows/push_to_docker.yml
+++ b/.github/workflows/push_to_docker.yml
@@ -46,6 +46,9 @@ jobs:
           yarn install
           yarn build
           cd ..
+          cd socket
+          yarn install
+          yarn build
 
       - name: <client-ts> Dockerize and Push to docker hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
@@ -74,11 +77,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,1.${{ github.run_number }}"
 
-      - name: <ad broad socket server> Dockerize and Push to docker hub
+      - name: <Ad broad socket server> Dockerize and Push to docker hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
         with:
           name: hwasurr/onad_socket
-          workdir: node_websocket
+          workdir: socket
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,1.${{ github.run_number }}"
