--- a/.github/workflows/push_to_docker.yml
+++ b/.github/workflows/push_to_docker.yml
@@ -49,6 +49,9 @@ jobs:
           cd socket
           yarn install
           yarn build
+          cd tracker
+          yarn install
+          yarn build
 
       - name: <client-ts> Dockerize and Push to docker hub
         uses: elgohr/Publish-Docker-Github-Action@2.14
@@ -82,6 +85,15 @@ jobs:
         with:
           name: hwasurr/onad_socket
           workdir: socket
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,1.${{ github.run_number }}"
+
+      - name: <Onad Tracker> Dockerize and Push to docker hub
+        uses: elgohr/Publish-Docker-Github-Action@2.14
+        with:
+          name: hwasurr/onad_tracker
+          workdir: tracker
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           tags: "latest,1.${{ github.run_number }}"
