tracker dockerfile추가/ 캠페인생성-문구 수정/swagger 삭제

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start:debug:mac": "PORT=3000 && nodemon --watch ./ --exec ts-node ./bin/www.ts",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js",
+    "postbuild": "cp -r ./public ./dist/public",
     "start:production": "NODE_ENV=production node ./dist/bundle.js",
     "start:production:window": "set NODE_ENV=production && node ./dist/bundle.js",
     "test": "jest --coverage --detectOpenHandles --forceExit --passWithNoTests"
